--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -5,17 +5,18 @@
     <title>Sign up</title>
 </head>
 <body>
-<h1>Create an account</h1>
+<h1>Register your account</h1>
 <form th:action="@{/sign-up}" method="POST" th:object="${user}">
+    <label for="firstName">Username</label>
+    <input id="firstName" th:field="*{firstName}"/>
+    <label for="lastName">Username</label>
+    <input id="lastName" th:field="*{lastName}"/>
     <label for="username">Username</label>
-    <input id="username" th:field="*{username}" />
-
+    <input id="username" th:field="*{username}"/>
     <label for="email">Email</label>
-    <input id="email" th:field="*{email}" />
-
+    <input id="email" th:field="*{email}"/>
     <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}" />
-
+    <input id="password" type="password" th:field="*{password}"/>
     <input value="Sign me up!" type="submit" />
 </form>
 </body>
