--- a/src/main/resources/templates/fragments/body-scripts.html
+++ b/src/main/resources/templates/fragments/body-scripts.html
@@ -10,6 +10,55 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script>
+        // Set up the picker
+        const client = filestack.init(FILESTACK_API_KEY);
+        const photoOptions = {
+            onUploadDone: updatePhotoForm,
+            maxSize: 10 * 1024 * 1024,
+            accept: 'image/*',
+            uploadInBackground: false,
+        };
+        const resumeOptions = {
+            onUploadDone: updateResumeForm,
+            maxSize: 10 * 1024 * 1024,
+            accept: 'image/*',
+            uploadInBackground: false,
+        };
+        const photoPicker = client.picker(photoOptions);
+        const resumePicker = client.picker(resumeOptions);
+        // Get references to the DOM elements
+        const photoInput = document.getElementById('photo-upload');
+        const photoBtn = document.getElementById('photo-picker');
+        const resumeInput = document.getElementById('resume-upload');
+        const resumeBtn = document.getElementById('resume-picker');
+
+
+        // Add our event listeners
+
+        photoBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            photoPicker.open();
+        });
+
+        resumeBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            resumePicker.open();
+        });
+
+        function updatePhotoForm (result) {
+            const fileData = result.filesUploaded[0];
+            photoInput.value = fileData.url; //this is the good part
+            console.log(fileData.url);
+            console.log(photoInput.value);
+        };
+        function updateResumeForm (result) {
+            const fileData = result.filesUploaded[0];
+            resumeInput.value = fileData.url; //this is the good part
+            console.log(fileData.url);
+            console.log(resumeInput.value);
+        };
+    </script>
 </th:block>
 </body>
 </html>
