--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -21,7 +21,7 @@
     </select>
     <br />
     <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
-    <input type="hidden" name="photo-upload" class="" id="photo-upload" name="photoURL">
+    <input type="hidden" class="" id="photo-upload" name="photoURL">
     <input type="submit" />
 </form>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
