--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -24,20 +24,20 @@
     <br/>
     <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
     <input type="hidden" class="" id="photo-upload" name="photoURL">
-    <button class="button photo-upload" type="button" id="resume-picker">Upload Profile Image</button>
+    <button class="button photo-upload" type="button" id="resume-picker">Upload Resume Image</button>
     <input type="hidden"  class="" id="resume-upload" name="resumeURL">
     <br/>
     <label for="is-admin">Admin</label>
-    <input id="is-admin" type="radio" th:value="true" th:field="*{isAdmin}">
+    <input id="is-admin" type="radio" value="true" name="isAdmin">
     <br/>
     <label for="is-instructor">Instructor</label>
-    <input id="is-instructor" type="radio" th:value="true" th:field="*{isInstructor}">
+    <input id="is-instructor" type="radio" value="true" name="isInstructor">
     <br/>
     <label for="is-alum">Alum</label>
-    <input id="is-alum" type="radio" th:value="true" th:field="*{isAlum}">
+    <input id="is-alum" type="radio" value="true" name="isAlum">
     <br/>
     <label for="is-student">Student</label>
-    <input id="is-student" type="radio" th:value="true" th:field="*{isStudent}">
+    <input id="is-student" type="radio" value="true" name="isStudent">
     <br/>
     <input value="Sign me up!" type="submit" />
 </form>
