workin with basic view for comments

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,6 +8,10 @@
     <h1 th:text = "${post.title}"></h1>
     <p th:text = "${post.body}"></p>
     <p th:text = "${post.user.email}"></p>
+<!--    NEW TESTING-->
+    <div th:each="comment : ${post.getCommentList()}">
+        <p th:text = "${comment}"></p>
+    </div>
     <div sec:authorize = "isAuthenticated()">
         <div th:if="${user.id == post.user.id}">
             <a th:href="@{|/posts/${post.id}/edit|}"><button>Edit Post</button></a>
