--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -9,8 +9,8 @@
     <p th:text = "${post.body}"></p>
     <p th:text = "${post.user.email}"></p>
 <!--    NEW TESTING-->
-    <div th:each="comment : ${post.getCommentList()}">
-        <p th:text = "${comment}"></p>
+    <div th:each="comment : ${post.commentList}">
+        <p th:text = "${comment.body}"></p>
     </div>
     <div sec:authorize = "isAuthenticated()">
         <div th:if="${user.id == post.user.id}">
