--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -22,8 +22,8 @@
     <label for="bio">Personal Bio</label>
     <textarea id="bio" th:field="*{bio}" cols="30" rows="10" maxlength="250" placeholder="Please type a brief summary that is less than 250 words."></textarea>
     <br/>
-<!--    <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>-->
-<!--    <input type="hidden" class="" id="photo-upload" name="photoURL">-->
+    <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
+    <input type="hidden" class="" id="photo-upload" name="photoURL">
     <button class="button photo-upload" type="button" id="resume-picker">Upload Resume Image</button>
     <input type="hidden"  class="" id="resume-upload" name="resumeURL">
 <!--    <form th:action="@{profile_image_url}" th:method="POST">-->
