--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments/header.html :: header(title = 'Codeon')"></head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <h1>this is the home page</h1>
