--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header.html :: header(title = 'Register your account!')"></head>
 <body>
-
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
 <h1>Register your account</h1>
 
 
