--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -28,6 +28,7 @@
             </a>
 
             <a sec:authorize = "!isAuthenticated()" th:href="@{/login}">
+                <a class="nav-link" href="/login">login</a>
             </a>
 
 
