ALL USERS CAN REGISTER WITH ROLES AND THEY WORK WITH SPRING SECURITTTTTYYYY

--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -38,16 +38,16 @@
 <!--    </form>-->
     <br/>
     <label for="is-admin">Admin</label>
-    <input id="is-admin" type="radio" value="true" name="isAdmin">
+    <input id="is-admin" type="radio" value="ADMIN" name="admin">
     <br/>
     <label for="is-instructor">Instructor</label>
-    <input id="is-instructor" type="radio" value="true" name="isInstructor">
+    <input id="is-instructor" type="radio" value="INSTRUCTOR" name="instructor">
     <br/>
     <label for="is-alum">Alum</label>
-    <input id="is-alum" type="radio" value="true" name="isAlum">
+    <input id="is-alum" type="radio" value="ALUMNUS" name="alumnus">
     <br/>
     <label for="is-student">Student</label>
-    <input id="is-student" type="radio" value="true" name="isStudent">
+    <input id="is-student" type="radio" value="STUDENT" name="student">
     <br/>
     <input value="Sign me up!" type="submit" />
 </form>
