--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -16,6 +16,10 @@
 <p><span th:text="${user.bio}"></span></p>
 
 <h1>Update your Bio</h1>
+<a th:href="@{|/user/${user.id}/edit|}"><button>Edit info</button></a>
+<label for="about_me" class="col-form-label">About Me:</label>
+<textarea class="form-control" id="about_me" name="aboutMe" type ="text" th:field="*{user.bio}"
+          placeholder="Tell us about you..."></textarea>
 
 <h1>Here are your Post</h1>
 <main class="container">
