--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -26,15 +26,10 @@
     <label for="bio">Personal Bio</label>
     <textarea id="bio" th:field="*{bio}" cols="30" rows="10" maxlength="250" placeholder="Please type a brief summary that is less than 250 words."></textarea>
     <br/>
-<!--    <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>-->
-<!--    <input type="hidden" class="" id="photo-upload" name="photoURL">-->
-<!--    <button class="button photo-upload" type="button" id="resume-picker">Upload Resume Image</button>-->
-<!--    <input type="hidden"  class="" id="resume-upload" name="resumeURL">-->
-    <p class="align-self-end profile-btns">
-        <button type="button" class="btn btn-light" data-toggle="modal" id="add-picture" data-target="#pictureModal">Load
-            Picture</button>
-        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#myModal">Load Resume</button>
-    </p>
+    <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
+    <input type="hidden" class="" id="photo-upload" name="photoURL">
+    <button class="button photo-upload" type="button" id="resume-picker">Upload Resume Image</button>
+    <input type="hidden"  class="" id="resume-upload" name="resumeURL">
     <br/>
     <label for="is-admin">Admin</label>
     <input id="is-admin" type="radio" value="ADMIN" name="admin">
