must be logged in for all activity now

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -18,5 +18,6 @@
     <input id="password" name="password" type="password" />
     <input type="submit" value="Log In" />
 </form>
+<a href="/register"><button>Register For An Account</button></a>
 </body>
 </html>
