still on the pofile

--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -28,26 +28,19 @@
 
 
 <main class="container">
-    <h1> Here are your comments</h1>
+    <h1> Here are your Posts</h1>
     <div th:each="post : ${post}">
         <a th:href="@{|/posts/${post.id}|}"><h1 th:text="${post.title}"></h1></a>
         <p th:text="${post.body}"></p>
         <a th:href="'mailto:'+${post.user.email}"><span th:text="${post.user.email}"></span> </a>
         <br>
         <a th:href="@{|/posts/${post.id}/edit|}"><button>Edit Post</button></a>
-        <form th:action="@{|/posts/${post.id}/delete|}" th:method="POST" style="display:inline">
+        <form th:action="@{|/posts/${post.id}/delete|}" th:method="DELETE" style="display:inline">
             <button>Delete Post</button>
         </form>
         <hr>
     </div>
-
 </main>
-
-
-
-
-
-
 
 
 
