--- a/src/main/resources/templates/mentorship/posts/show.html
+++ b/src/main/resources/templates/mentorship/posts/show.html
@@ -7,9 +7,10 @@
     <h1 th:text = "${post.title}"></h1>
     <p th:text = "${post.body}"></p>
     <p th:text = "${post.user.email}"></p>
-<!--    NEW TESTING-->
+    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Outside of Security Delete Post</button>
+    NEW TESTING
 
-<!-- Will working on ratings -->
+ Will working on ratings
     <div sec:authorize = "isAuthenticated()">
         <a th:href="@{|/posts/${post.id}/ratings/upvote|}"><button>Upvote</button></a>
         <a th:href="@{|/posts/${post.id}/ratings/downvote|}"><button>Downvote</button></a>
@@ -18,18 +19,19 @@
         </div>
         <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
     </div>
-<!-- END Will working on ratings -->
+ END Will working on ratings
 
     <div th:each="comment : ${post.commentList}">
         <p th:text = "${comment.body}"></p>
     </div>
     <div sec:authorize = "isAuthenticated()">
-        <div th:if="${user.id == post.user.id}">\
+        <div th:if="${user.id == post.user.id}">
             <a th:href="@{|/posts/${post.id}/edit|}"><button>Edit Post</button></a>
-            <button class="delete-button" th:id="${post.getPostType()} + '-' + ${post.id}">Delete Post</button>
+            <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
         </div>
     </div>
 </div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+
 </body>
 </html>
