--- a/src/main/resources/templates/interview-questions/show-one.html
+++ b/src/main/resources/templates/interview-questions/show-one.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="fragments/header.html :: header(title = 'Interview Questions')"></head>
+<head th:replace="fragments/header.html :: header(title = 'One Sorted Interview Question')"></head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
     <h1 th:text = "${post.title}"></h1>
