--- a/src/main/resources/templates/fragments/body-scripts.html
+++ b/src/main/resources/templates/fragments/body-scripts.html
@@ -10,8 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="//static.filestackapi.com/filestack-js/1.x.x/filestack.min.js"></script>
-    <script type="text/javascript" th:src="@{js/keys.js}"></script>
-    <script type="text/javascript" th:src="@{js/delete.js}" th:inline="javascript"></script>
+    <script type="text/javascript" th:src="@{~/js/keys.js}"></script>
+    <script type="text/javascript" th:src="@{~/js/delete.js}" th:inline="javascript"></script>
+    <script type="text/javascript" th:src="@{~/js/ratings.js}" th:inline="javascript"></script>
     <script>
         // Set up the picker
         const client = filestack.init(FILESTACK_API_KEY);
