--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header(title)">
-    <meta name="_csrf" content="${_csrf.token}"/>
+
     <title th:text="${title}"></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="_csrf_header" content="${_csrf.headerName}"
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
 
     <!-- include stylesheets, etc here -->
