--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,49 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
     <a class="navbar-brand" href="/">Codeon</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/posts/show">View Post</a>
-            </li>
-            <a sec:authorize = "!isAuthenticated()">
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">register</a>
-                </li>
-            </a>
-            <a sec:authorize = "isAuthenticated()">
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile">profile</a>
-                </li>
-            </a>
-
-            <a sec:authorize = "!isAuthenticated()" th:href="@{/login}">
-                <a class="nav-link" href="/login">login</a>
-            </a>
-            <a sec:authorize = "isAuthenticated()" th:href="@{/posts/create}">
-                <a class="nav-link" href="/posts/create">post/create</a>
-            </a>
-
-            <a sec:authorize = "isAuthenticated()">
+        <ul th:if="${#httpServletRequest.requestURI.contains('interview-questions')}" class="navbar-nav ml-auto">
             <li class="nav-item">
-                <form th:action="@{/logout_app}" th:method="post">
+                <a class="nav-link" th:href="@{|/users/profile|}">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/interview-questions/show|}">View Interview Questions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/interview-questions/create|}">Create Interview Questions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/mentorship-posts/show|}">Mentorship Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/job-postings/show|}">Job Postings</a>
+            </li>
+            <li class="nav-item">
+                <form th:action="@{~/logout_app}" th:method="post">
                     <button class="btn-link btn">Logout</button>
                 </form>
             </li>
-            </a>
-            <a sec:authorize=   "isAuthenticated()">
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-            </a>
+        </ul>
+        <ul th:if="${#httpServletRequest.requestURI.contains('mentorship-posts')}" class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/users/profile|}">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/mentorship-posts/show|}">View Mentorship Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/mentorship-posts/create|}">Create Mentorship Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/interview-questions/show|}">Interview Questions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/job-postings/show|}">Job Postings</a>
+            </li>
+            <li class="nav-item">
+                <form th:action="@{~/logout_app}" th:method="post">
+                    <button class="nav-item btn">Logout</button>
+                </form>
+            </li>
+        </ul>
+        <ul th:if="${#httpServletRequest.requestURI.contains('job-postings')}" class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/users/profile|}">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/job-postings/show|}">View Job Postings</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/job-postings/create|}">Create Job Postings</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/interview-questions/show|}">Interview Questions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{|/mentorship-posts/show|}">Mentorship Posts</a>
+            </li>
+            <li class="nav-item">
+                <form th:action="@{~/logout_app}" th:method="post">
+                    <button class="btn-link btn">Logout</button>
+                </form>
+            </li>
         </ul>
     </div>
 </nav>
