--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -9,9 +9,7 @@
     <p th:text = "${post.user.email}"></p>
 
     <div sec:authorize = "isAuthenticated()">
-        <a th:href="@{|/posts/${post.id}/ratings/upvote|}"><button>Upvote</button></a>
         <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
-        <a th:href="@{|/posts/${post.id}/ratings/downvote|}"><button>Downvote</button></a>
         <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
         <div th:each="postRating : ${post.ratingList}">
             <p th:text="${postRating.rating}"></p>
@@ -22,7 +20,7 @@
         <p th:text = "${comment.body}"></p>
     </div>
     <div th:if="${user.id == post.user.id}">
-        <a th:href="@{|/posts/${post.id}/edit|}"><button>Edit Post</button></a>
+        <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
         <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
     </div>
 </div>
