--- a/src/main/resources/templates/fragments/body-scripts.html
+++ b/src/main/resources/templates/fragments/body-scripts.html
@@ -45,17 +45,7 @@
                     let body = document.querySelector(`#comment-${this.getAttribute("id").split("-")[3]}`).value;
                     let idSplit = this.getAttribute("id").split("-");
                     let postId = idSplit[3];
-                    fetch(`http://localhost:8080/comments/create/${postId}?body=${body}`, {
-                        method: 'POST',
-                        headers: {
-                            'X-CSRF-TOKEN': token
-                        }
-                    })
-                        .then(res => {
-                            location.reload(true);
-                        })
-                    //change this for production
-                    // fetch(`http://codeon-capstone.com/comments/create/${postId}?body=${body}`, {
+                    // fetch(`http://localhost:8080/comments/create/${postId}?body=${body}`, {
                     //     method: 'POST',
                     //     headers: {
                     //         'X-CSRF-TOKEN': token
@@ -64,6 +54,16 @@
                     //     .then(res => {
                     //         location.reload(true);
                     //     })
+                    //change this for production
+                    fetch(`http://codeon-capstone.com/comments/create/${postId}?body=${body}`, {
+                        method: 'POST',
+                        headers: {
+                            'X-CSRF-TOKEN': token
+                        }
+                    })
+                        .then(res => {
+                            location.reload(true);
+                        })
                 })
 
             }))
